# dokumentu

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/io/nava/dokumentu/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  csv_manager.cpp  csv_manager.h  native-lib.cpp  text_utils.h
app/src/main/java/io/nava/dokumentu/app/: CSVDataBridge.java  CSVTableAdapter.java  CSVViewerActivity.java  MainActivity.java  SynchronizedCSVAdapter.java
app/src/main/res/drawable/: compact_button_bg.xml
app/src/main/res/layout/: activity_csv_viewer.xml  activity_main.xml  item_csv_cell_data.xml  item_csv_cell_data_improved.xml  item_csv_cell_header.xml  item_csv_data_row.xml  item_csv_header_row.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/nava/dokumentu/app/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
